<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	tools:context=".EditPhraseActivity">

	<RelativeLayout
		android:id="@+id/header"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<ImageView
			android:id="@+id/logo"
			android:layout_width="80dp"
			android:layout_height="80dp"
			android:layout_marginStart="10dp"
			android:background="@drawable/translation"
			android:contentDescription="@string/logo_image"
			android:layout_alignParentStart="true"
			android:layout_centerInParent="true"/>

		<TextView
			android:id="@+id/appActivityState"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:fontFamily="@font/montserrat"
			android:letterSpacing="0.085"
			android:text="@string/edit_phrase_activity_name"
			android:textColor="@color/colorSecondary"
			android:textFontWeight="100"
			android:textSize="24sp"
			android:layout_marginHorizontal="20dp"
			android:layout_alignParentEnd="true"
			android:layout_centerInParent="true"
			tools:ignore="RelativeOverlap" />
	</RelativeLayout>

	<TextView
		android:id="@+id/subheading"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="30dp"
		android:layout_marginVertical="20dp"
		android:text="@string/diplsayPhrases_subheading"
		android:textColor="@color/colorSecondaryVariant"
		android:textSize="24sp"
		android:layout_below="@id/header"/>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginHorizontal="20dp"
		android:layout_below="@id/subheading">

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/dbItemsList"
			android:layout_width="match_parent"
			android:layout_height="match_parent" />
	</RelativeLayout>

	<com.google.android.material.button.MaterialButton
		android:id="@+id/edit_btn"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_marginHorizontal="20dp"
		app:backgroundTint="@color/colorSecondary"
		android:text="@string/edit_btn"
		android:visibility="invisible"/>

</RelativeLayout>