<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	tools:context=".SplashScreenActivity"
	>


	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintBottom_toBottomOf="@id/ibmAccreditationText"
		android:orientation="vertical"
		android:gravity="center">

		<ImageView
			android:layout_width="200dp"
			android:layout_height="200dp"
			android:background="@drawable/translation"
			android:contentDescription="@string/logo_image" />

		<TextView
			android:id="@+id/appName"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:fontFamily="@font/montserrat"
			android:layout_marginTop="-25dp"
			android:textFontWeight="100"
			android:letterSpacing="0.100"
			android:text="@string/AppNameSplash"
			android:textColor="@color/colorSecondary"
			android:textSize="48sp" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:fontFamily="@font/montserrat"
			android:text="@string/AppSubQuote"/>
	</LinearLayout>


	<TextView
		android:id="@+id/ibmAccreditationText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		android:text="Powered by IBM Watson Cloud Services"/>

</androidx.constraintlayout.widget.ConstraintLayout>