<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".AddPhraseActivity">

	<RelativeLayout
		android:id="@+id/header"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<ImageView
			android:id="@+id/logo"
			android:layout_width="80dp"
			android:layout_height="80dp"
			android:layout_alignParentStart="true"
			android:layout_centerInParent="true"
			android:layout_marginStart="10dp"
			android:background="@drawable/translation"
			android:contentDescription="@string/logo_image" />

		<TextView
			android:id="@+id/appActivityState"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentEnd="true"
			android:layout_centerInParent="true"
			android:layout_marginHorizontal="20dp"
			android:fontFamily="@font/montserrat"
			android:letterSpacing="0.085"
			android:text="@string/add_phrase_activity_name"
			android:textColor="@color/colorSecondary"
			android:textFontWeight="100"
			android:textSize="32sp"
			tools:ignore="RelativeOverlap" />
	</RelativeLayout>

	<LinearLayout
		android:id="@+id/search_bar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginEnd="10dp"
		android:orientation="horizontal"
		android:layout_below="@id/header">

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/outlinedTextField"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
			android:layout_width="300dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="5dp"
			android:hint="@string/type_a_phrase_hint">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/addPhraseText"
				android:layout_width="match_parent"
				android:layout_height="match_parent" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.button.MaterialButton
			android:id="@+id/addPhraseButton"
			android:layout_width="wrap_content"
			android:layout_height="60dp"
			android:layout_marginStart="10dp"
			android:background="@color/colorSecondary"
			android:text="@string/add_phrase_buttonTxt" />

	</LinearLayout>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginHorizontal="20dp"
		android:layout_below="@id/search_bar">

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/dbItemsList"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:elevation="@dimen/cardview_default_elevation" />
	</RelativeLayout>


</RelativeLayout>