<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".LanguageSubscriptionActivity">

	<RelativeLayout
		android:id="@+id/header"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/colorPrimary"
		android:orientation="horizontal"
		android:elevation="10dp">
		<ImageView
			android:id="@+id/logo"
			android:layout_width="80dp"
			android:layout_height="80dp"
			android:layout_marginStart="10dp"
			android:background="@drawable/translation"
			android:contentDescription="@string/logo_image"
			android:layout_alignParentStart="true"
			android:layout_centerInParent="true"/>

		<TextView
			android:id="@+id/appActivityState"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:fontFamily="@font/montserrat"
			android:letterSpacing="0.085"
			android:text="@string/language_subscriptions_activity_name"
			android:textColor="@color/colorSecondary"
			android:textFontWeight="100"
			android:lineHeight="20dp"
			android:textSize="18sp"
			android:layout_marginHorizontal="10dp"
			android:layout_alignParentEnd="true"
			android:layout_centerInParent="true"
			tools:ignore="RelativeOverlap" />
	</RelativeLayout>

<!--	<ListView-->
<!--		android:id="@+id/subscriptionListView"-->
<!--		android:layout_width="match_parent"-->
<!--		android:layout_height="match_parent" />-->

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginHorizontal="20dp"
		android:layout_below="@id/header">

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/itemRecycleView"
			android:layout_width="match_parent"
			android:layout_height="match_parent" />
	</RelativeLayout>

	<com.google.android.material.button.MaterialButton
		android:id="@+id/subscribe"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:layout_marginHorizontal="10dp"
		android:layout_alignParentBottom="true"
		android:background="@color/colorSecondary"
		android:text="@string/subscribe"
		android:visibility="invisible"/>



</RelativeLayout>