<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">

	<RelativeLayout
		android:id="@+id/header"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintTop_toTopOf="parent"
		android:orientation="horizontal">
		<ImageView
			android:id="@+id/logo"
			android:layout_width="80dp"
			android:layout_height="80dp"
			android:layout_marginStart="10dp"
			android:background="@drawable/translation"
			android:contentDescription="@string/logo_image"
			android:layout_alignParentStart="true"
			android:layout_centerInParent="true"/>

		<TextView
			android:id="@+id/appActivityState"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:fontFamily="@font/montserrat"
			android:letterSpacing="0.085"
			android:text="@string/AppNameSplash"
			android:textColor="@color/colorSecondary"
			android:textFontWeight="100"
			android:textSize="32sp"
			android:layout_marginHorizontal="20dp"
			android:layout_alignParentEnd="true"
			android:layout_centerInParent="true"
			tools:ignore="RelativeOverlap" />
	</RelativeLayout>

	<GridLayout
		android:layout_width="380dp"
		android:layout_height="0dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintTop_toBottomOf="@id/header"
		android:layout_marginVertical="80dp">

		<com.google.android.material.card.MaterialCardView
			android:id="@+id/addCard"
			android:layout_row="0"
			android:layout_column="0"
			style="@style/menuCard"
			app:cardBackgroundColor="@color/colorPrimary"
			android:clickable="true"
			android:tag="add">

			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:padding="5dp">

				<ImageView
					android:layout_width="30dp"
					android:layout_height="30dp"
					android:layout_alignParentStart="true"
					android:layout_centerInParent="true"
					android:background="@drawable/add"
					tools:ignore="ContentDescription" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentEnd="true"
					android:layout_centerInParent="true"
					android:fontFamily="@font/roboto_medium"
					android:text="@string/add_phrases_btn"
					android:textColor="@color/colorSecondary" />
			</RelativeLayout>
		</com.google.android.material.card.MaterialCardView>

		<com.google.android.material.card.MaterialCardView
			android:id="@+id/editCard"
			style="@style/menuCard"
			android:layout_row="0"
			android:layout_column="1"
			android:clickable="true"
			android:tag="edit">

			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:padding="5dp">

				<ImageView
					android:layout_width="30dp"
					android:layout_height="30dp"
					android:layout_alignParentStart="true"
					android:layout_centerInParent="true"
					android:background="@drawable/edit"
					tools:ignore="ContentDescription" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentEnd="true"
					android:layout_centerInParent="true"
					android:fontFamily="@font/roboto_medium"
					android:text="@string/edit_phrases_btn"
					android:textColor="@color/colorSecondary" />
			</RelativeLayout>
		</com.google.android.material.card.MaterialCardView>

		<Space
			android:layout_height="40dp"
			android:layout_row="1"
			android:layout_column="0"
			android:layout_columnSpan="1" />

		<com.google.android.material.card.MaterialCardView
			android:id="@+id/displayCard"
			style="@style/menuCard"
			android:layout_row="2"
			android:layout_column="0"
			android:clickable="true"
			android:tag="display">

			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:padding="5dp">

				<ImageView
					android:layout_width="30dp"
					android:layout_height="30dp"
					android:layout_alignParentStart="true"
					android:layout_centerInParent="true"
					android:background="@drawable/list"
					tools:ignore="ContentDescription" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentEnd="true"
					android:layout_centerInParent="true"
					android:fontFamily="@font/roboto_medium"
					android:text="@string/display_phrases_btn"
					android:textColor="@color/colorSecondary" />
			</RelativeLayout>
		</com.google.android.material.card.MaterialCardView>

		<com.google.android.material.card.MaterialCardView
			android:id="@+id/languageSubscription"
			style="@style/menuCard"
			android:layout_row="2"
			android:layout_column="1"
			android:clickable="true"
			android:tag="subscriptions">

			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:padding="5dp">

				<ImageView
					android:layout_width="30dp"
					android:layout_height="30dp"
					android:layout_alignParentStart="true"
					android:layout_centerInParent="true"
					android:background="@drawable/language"
					tools:ignore="ContentDescription" />

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:layout_alignParentEnd="true"
					android:layout_centerInParent="true"
					android:orientation="vertical"
					android:gravity="center">
					<TextView
						android:id="@+id/textPt1"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:fontFamily="@font/roboto_medium"
						android:text="@string/language_subscriptions_btn_pt1"
						android:textAlignment="textEnd"
						android:textColor="@color/colorSecondary" />
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:fontFamily="@font/roboto_medium"
						android:text="@string/language_subscriptions_btn_pt2"
						android:textColor="@color/colorSecondary" />
				</LinearLayout>

			</RelativeLayout>
		</com.google.android.material.card.MaterialCardView>

		<Space
			android:layout_height="40dp"
			android:layout_row="3"
			android:layout_column="0"
			android:layout_columnSpan="1" />

		<com.google.android.material.card.MaterialCardView
			android:id="@+id/translateCard"
			android:layout_width="match_parent"
			android:layout_height="92dp"
			android:layout_row="4"
			android:layout_column="0"
			android:layout_columnSpan="3"
			android:layout_marginStart="10dp"
			android:layout_marginEnd="10dp"
			app:cardElevation="5dp"
			android:clickable="true"
			android:tag="translate">

			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:padding="25dp">

				<ImageView
					android:layout_width="40dp"
					android:layout_height="40dp"
					android:layout_alignParentStart="true"
					android:layout_centerInParent="true"
					android:background="@drawable/translate" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentEnd="true"
					android:layout_centerInParent="true"
					android:fontFamily="@font/roboto_medium"
					android:text="@string/translate_btn"
					android:textSize="18sp"
					android:textColor="@color/colorSecondary" />
			</RelativeLayout>
		</com.google.android.material.card.MaterialCardView>


	</GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>