<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<RelativeLayout
		android:id="@+id/header"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:orientation="horizontal">
		<ImageView
			android:id="@+id/logo"
			android:layout_width="80dp"
			android:layout_height="80dp"
			android:layout_marginStart="10dp"
			android:background="@drawable/translation"
			android:contentDescription="@string/logo_image"
			android:layout_alignParentStart="true"
			android:layout_centerInParent="true"/>

		<TextView
			android:id="@+id/appActivityState"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:fontFamily="@font/montserrat"
			android:letterSpacing="0.085"
			android:text="@string/display_phrases_activity_name"
			android:textColor="@color/colorSecondary"
			android:textFontWeight="100"
			android:textSize="24sp"
			android:layout_marginHorizontal="20dp"
			android:layout_alignParentEnd="true"
			android:layout_centerInParent="true"
			tools:ignore="RelativeOverlap" />
	</RelativeLayout>


	<LinearLayout
		android:id="@+id/subheading_container"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/header"
		android:layout_marginTop="10dp"
		android:orientation="horizontal">
		<TextView
			android:id="@+id/subheading"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="30dp"
			android:text="@string/diplsayPhrases_subheading"
			android:textColor="@color/colorSecondaryVariant"
			android:gravity="start|center_vertical"
			android:layout_weight="1"
			android:textSize="24sp"/>
		<Spinner
			android:id="@+id/languageSpinner"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="end|center_vertical"
			android:layout_weight="1" />

	</LinearLayout>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginHorizontal="20dp"
		android:layout_marginTop="10dp"
		android:layout_below="@id/subheading_container">
		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/dbItemsList"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />
	</RelativeLayout>



</RelativeLayout>