<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	tools:context=".TranslateActivity">

	<RelativeLayout
		android:id="@+id/header"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<ImageView
			android:id="@+id/logo"
			android:layout_width="80dp"
			android:layout_height="80dp"
			android:layout_alignParentStart="true"
			android:layout_centerInParent="true"
			android:layout_marginStart="30dp"
			android:background="@drawable/translation"
			android:contentDescription="@string/logo_image" />

		<TextView
			android:id="@+id/appActivityState"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentEnd="true"
			android:layout_centerInParent="true"
			android:layout_marginHorizontal="30dp"
			android:fontFamily="@font/montserrat"
			android:letterSpacing="0.085"
			android:text="@string/translate_activity_name"
			android:textColor="@color/colorSecondary"
			android:textFontWeight="100"
			android:textSize="32sp"
			tools:ignore="RelativeOverlap" />
	</RelativeLayout>

	<RelativeLayout
		android:id="@+id/sourceEditTextHolder"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@id/header"
		android:layout_marginTop="10dp"
		android:padding="10dp">
		<androidx.cardview.widget.CardView
			android:id="@+id/translationBox"
			android:layout_width="match_parent"
			android:layout_height="40dp"
			android:layout_marginHorizontal="40dp"
			app:cardCornerRadius="20dp"
			app:cardElevation="4dp"
			android:padding="10dp">
			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
				<Spinner
					android:id="@+id/sourceLangSpinner"
					android:layout_width="130dp"
					android:layout_height="match_parent"
					android:layout_marginEnd="25dp"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toEndOf="@id/placeholderIcon"
					app:layout_constraintTop_toTopOf="parent"
					app:layout_constraintBottom_toBottomOf="parent"/>
				<ImageView
					android:id="@+id/placeholderIcon"
					android:layout_width="32dp"
					android:layout_height="32dp"
					android:background="@drawable/reload"
					android:layout_marginVertical="10dp"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					app:layout_constraintBottom_toBottomOf="parent"
					android:clickable="true"
					tools:ignore="ContentDescription" />
				<Spinner
					android:id="@+id/targetLangSpinner"
					android:layout_width="130dp"
					android:layout_height="match_parent"
					android:layout_centerInParent="true"
					android:layout_marginStart="25dp"
					app:layout_constraintStart_toStartOf="@id/placeholderIcon"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					app:layout_constraintBottom_toBottomOf="parent"/>
			</androidx.constraintlayout.widget.ConstraintLayout>
		</androidx.cardview.widget.CardView>

		<androidx.cardview.widget.CardView
			android:id="@+id/userInputBox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="-20dp"
			android:layout_below="@id/translationBox"
			app:cardBackgroundColor="@color/colorSecondary"
			app:cardCornerRadius="20dp"
			android:layout_marginHorizontal="20dp"
			android:clickable="false"
			android:descendantFocusability="afterDescendants">
			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent">
				<EditText
					android:id="@+id/sourceEditText"
					android:layout_width="match_parent"
					android:layout_height="200dp"
					android:layout_marginTop="30dp"
					android:background="@android:color/transparent"
					android:padding="10dp"
					android:textAlignment="viewStart"
					android:textColor="@color/colorPrimary"
					android:textSize="24sp"
					android:hint="@string/type_something_hint"
					android:textColorHint="@color/colorPrimary"
					android:inputType="text"
					android:imeOptions="actionDone"
					android:importantForAutofill="no" />
				<com.google.android.material.button.MaterialButton
					android:id="@+id/savedPhraseBtn"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_below="@id/sourceEditText"
					android:fontFamily="@font/roboto_medium"
					android:textAllCaps="false"
					android:elevation="20dp"
					android:backgroundTint="@color/colorPrimary"
					android:textColor="@color/colorAccent"
					app:cornerRadius="20dp"
					android:paddingHorizontal="30dp"
					android:layout_marginStart="10dp"
					android:layout_marginBottom="10dp"
					android:text="@string/saved_phrases" />
				<ImageButton
					android:id="@+id/sourceTextSpeakBtn"
					android:tag="source"
					android:layout_width="36dp"
					android:layout_height="36dp"
					android:background="@drawable/speak"
					android:layout_alignParentEnd="true"
					android:layout_below="@id/sourceEditText"
					android:layout_centerInParent="true"
					android:layout_marginEnd="10dp"
					android:layout_marginTop="5dp"
					android:layout_marginBottom="15dp"
					android:onClick="speak"
					tools:ignore="ContentDescription" />
			</RelativeLayout>

		</androidx.cardview.widget.CardView>

		<androidx.cardview.widget.CardView
			android:id="@+id/translationResultTextViewHolder"
			android:layout_width="match_parent"
			android:layout_height="250dp"
			android:layout_marginTop="20dp"
			android:layout_below="@id/userInputBox"
			app:cardBackgroundColor="@color/colorPrimary"
			app:cardCornerRadius="20dp"
			android:clickable="false"
			android:layout_marginBottom="20dp"
			android:layout_marginHorizontal="20dp"
			android:descendantFocusability="afterDescendants">
			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent">
				<ProgressBar
					android:id="@+id/progress_horizontal"
					android:theme="@style/progressBarStyle"
					style="@style/Widget.AppCompat.ProgressBar.Horizontal"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginHorizontal="5dp"
					android:layout_alignParentTop="true"/>
				<!--android:progressDrawable="@drawable/progressbar_hor"-->

				<EditText
					android:id="@+id/translationResultTextView"
					android:layout_width="match_parent"
					android:layout_height="180dp"
					android:padding="10dp"
					android:hint="@string/result_placeholder"
					android:background="@color/colorPrimary"
					android:textColor="@color/colorAccent"
					android:inputType="none"
					android:enabled="false"
					tools:ignore="Autofill" />
				<ImageButton
					android:id="@+id/resultTextSpeakBtn"
					android:tag="result"
					android:layout_width="36dp"
					android:layout_height="36dp"
					android:background="@drawable/speak"
					android:backgroundTint="@color/colorSecondary"
					android:layout_below="@id/translationResultTextView"
					android:layout_alignParentEnd="true"
					android:layout_marginTop="5dp"
					android:layout_marginEnd="10dp"
					android:layout_marginBottom="5dp"
					android:onClick="speak"
					tools:ignore="ContentDescription" />
			</RelativeLayout>
		</androidx.cardview.widget.CardView>



	</RelativeLayout>

</RelativeLayout>